# poker-solver

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: settings.json
.claude/skills/: poker-solver.md
.githooks/: install.sh  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bench.yml  ci.yml
bench-history/: 2026-04-23_094257_8e26e00.json  2026-04-23_105049_d8505fa.json  2026-04-23_110058_3480502.json  2026-04-23_145752_0e590c0.json  2026-04-23_182335_7d6556e.json  2026-04-23_203607_1ee50b9.json  2026-04-23_210308_678cb91.json  2026-04-23_211102_7119143.json  README.md
benches/: README.md
colab/: README.md  convergence_bench.ipynb  convergence_bench.md  drive_auth.py  precompute_flops.ipynb  precompute_flops.md  precompute_preflop.ipynb  precompute_preflop.md  setup.sh
crates/solver-cli/: Cargo.toml
crates/solver-cli/src/: demo.rs  demo_spots.rs  main.rs  md_to_ipynb.rs  pack_cache.rs  seed_cache.rs  solve_cmd.rs  translate.rs
crates/solver-cli/tests/: cli.rs  e2e_integration.rs  fixtures_parse.rs  texassolver_diff.rs  translate_fixture.rs
crates/solver-cli/tests/fixtures/: README.md  SCHEMA.md  spot_001.json  spot_002.json  spot_003.json  spot_004.json  spot_005.json  spot_006.json  spot_007.json  spot_008.json  spot_009.json  spot_010.json  spot_011.json  spot_012.json  spot_013.json  spot_014.json  spot_015.json  spot_016.json  spot_017.json  spot_018.json  spot_019.json  spot_020.json
crates/solver-cli/tests/fixtures/oracle_outputs/: README.md  spot_015.our.json  spot_015.texassolver.json  spot_015.ts-log.txt  spot_015.tsconfig  spot_016.our.json  spot_016.texassolver.json  spot_016.ts-log.txt  spot_016.tsconfig  spot_017.our.json  spot_017.texassolver.json  spot_017.ts-log.txt  spot_017.tsconfig  spot_018.our.json  spot_018.texassolver.json  spot_018.ts-log.txt  spot_018.tsconfig  spot_020.our.json  spot_020.texassolver.json  spot_020.ts-log.txt  spot_020.tsconfig
crates/solver-core/: Cargo.toml  build.rs
crates/solver-core/benches/: cfr_kuhn.rs  flat_vs_hashmap.rs  metal_matching.rs  regret_matching.rs  river.rs  river_vector.rs  simd_matching.rs
crates/solver-core/benches/common/: kuhn.rs
crates/solver-core/src/: cfr.rs  cfr_flat.rs  cfr_vector.rs  convergence.rs  game.rs  lib.rs  matching.rs  matching_simd.rs  mccfr.rs  tables.rs  tables_vector.rs
crates/solver-core/src/metal/: device.rs  mod.rs
crates/solver-core/src/metal/shaders/: regret_matching.metal
crates/solver-core/tests/: flat_equivalence.rs  kuhn.rs  metal_equivalence.rs  proptest_cfr.rs  simd_equivalence.rs  vector_equivalence.rs
crates/solver-eval/: Cargo.toml
crates/solver-eval-reference/: Cargo.toml
crates/solver-eval-reference/src/: equity.rs  eval.rs  lib.rs  preflop.rs  showdown.rs
crates/solver-eval/examples/: eval_microbench.rs
crates/solver-eval/src/: board.rs  card.rs  combo.rs  equity.rs  eval.rs  hand.rs  iso.rs  lib.rs  texture.rs
crates/solver-eval/tests/: differential.rs  equity_goldens.rs  proptest_primitives.rs
crates/solver-ffi/: Cargo.toml  Package.swift  build.rs  cbindgen.toml
crates/solver-ffi/Sources/PokerSolver/: PokerSolver.swift
crates/solver-ffi/examples/swift-harness/: .gitignore  README.md  main.swift  main_e2e.swift
crates/solver-ffi/include/: solver.h
crates/solver-ffi/src/: lib.rs
crates/solver-ffi/tests/: smoke.rs
crates/solver-nlhe/: Cargo.toml
crates/solver-nlhe/src/: action.rs  bet_tree.rs  cache.rs  flop_cache.rs  lib.rs  preflop.rs  range.rs  subgame.rs  subgame_turn.rs  subgame_vector.rs  subgame_vector_neon.rs
crates/solver-nlhe/tests/: flop_cache_roundtrip.rs  proptest_ranges.rs  river_canonical.rs  river_vector_vs_flat.rs
data/flop-cache/: .gitkeep  README.md
data/iso-tables/: .gitkeep
data/preflop-ranges/: .gitkeep
docs/: A73_PROFILING.md  ALGORITHMS.md  ARCHITECTURE.md  BENCHMARKS.md  COLAB.md  DIFFERENTIAL_TESTING.md  E2E_TESTING.md  EXPLOITABILITY_TRIAGE.md  GETTING_STARTED.md  GLOSSARY.md  HARDWARE.md  INTEGRATION.md  LIMITING_FACTOR.md  LINK_CHECK.md  MORNING_BRIEF.md  POKER.md  POKER_PANEL_ORACLE.md  RELEASE_NOTES_v0.1.md  RELEASE_PROCESS.md  REQUIREMENTS.md  ROADMAP.md  ROADMAP_V0_2.md  SHIP_V0_1.md  TAG_V0_1_RUNBOOK.md  WHY.md
scripts/: build-release.sh  build-xcframework.sh  build_swift_harness.sh  e2e.sh  gh-release.sh  install-texassolver-colab.sh  install-texassolver.sh  ship.sh  translate_fixture.py  translate_fixture.sh
