[package]
name = "solver-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Game-agnostic CFR+/MCCFR/Vector CFR solver core"

[dependencies]
rayon = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
# Portable SIMD for matching_simd.rs. std::simd (portable_simd, tracking
# issue rust-lang/rust#86656) is still nightly-only on the pinned 1.85
# stable toolchain (see rust-toolchain.toml), so we use `wide` — which
# gives a stable 8-wide f32x8 mapping to NEON on Apple Silicon and AVX
# on x86, with a scalar fallback everywhere else. See
# `src/matching_simd.rs` and `benches/simd_matching.rs`.
wide = "0.7"

[dev-dependencies]
criterion = { workspace = true }
# Property-based testing: used by tests/proptest_cfr.rs (A24). See
# docs/BENCHMARKS.md#property-tests for the invariants it encodes.
proptest = { workspace = true }

[[bench]]
name = "river"
harness = false

[[bench]]
name = "regret_matching"
harness = false

[[bench]]
name = "cfr_kuhn"
harness = false

[[bench]]
name = "flat_vs_hashmap"
harness = false

[[bench]]
name = "simd_matching"
harness = false
