[package]
name = "solver-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Card, hand evaluator, equity, isomorphism — pure poker primitives"

[dependencies]
bytemuck = { workspace = true }
# Hand evaluator. Picked `rs_poker` (crate name uses underscore) over
# `pokerlookup` because rs_poker is actively maintained, pure-Rust with no
# C deps, and provides both `rank()` (7-card) and `rank_five()` (5-card)
# off its `Rankable` trait. We disable the default features (`arena`,
# `serde`) because we only need `core::{Card, Rank, Rankable, Suit,
# Value}` — the arena poker-simulation layer and serde impls are dead
# weight here and the arena feature even pulls in nightly-only features.
rs_poker = { version = "4.1", default-features = false }
# Deterministic PRNG for Monte Carlo equity runouts (agent A3, Day 2).
# xoshiro is ~3ns per u64 and seedable, so equity results are
# reproducible across runs — which matters for tests and for CFR
# determinism when we sample runouts inside the solver.
rand = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
# Used exclusively by tests/differential.rs (agent A8, Day 1). The
# reference oracle is a from-scratch hand evaluator ported from Poker
# Panel's Python backend, used to cross-check `eval::eval_7` on random
# inputs. Not linked into any production build.
solver-eval-reference = { workspace = true }
# Property-based testing: used by tests/proptest_primitives.rs (A24).
proptest = { workspace = true }
