[package]
name = "solver-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "C FFI surface for Swift consumption by Poker Panel"

[lib]
# staticlib for Swift Package Manager binary target
# cdylib for dynamic loading if ever needed
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
solver-core = { workspace = true }
solver-nlhe = { workspace = true }
solver-eval = { workspace = true }
bytemuck = { workspace = true }

[build-dependencies]
# Used by build.rs to regenerate include/solver.h from lib.rs.
# If cbindgen fails (e.g., a stripped-down CI without the build-dep graph),
# build.rs emits a cargo:warning and continues so the library still compiles.
cbindgen = "0.26"
