[package]
name = "solver-nlhe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "NLHE game tree, ranges, bet-tree abstraction"

[dependencies]
solver-core = { workspace = true }
solver-eval = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
# Portable SIMD for the vector-CFR showdown matmul in subgame_vector.rs.
# Same `wide = "0.7"` that solver-core uses; lines up with its NEON/AVX
# backends on Apple Silicon and x86, scalar fallback elsewhere.
wide = "0.7"
# Cache compression (A33). Used by `preflop.rs` and `flop_cache.rs` for
# the optional compressed write/load paths. Default features disabled to
# drop the tokio layer — we only need the sync codec.
zstd = { workspace = true }

[dev-dependencies]
# Property-based testing: used by tests/proptest_ranges.rs (A24). See
# docs/BENCHMARKS.md#property-tests for the invariants it encodes.
proptest = { workspace = true }
# Deterministic PRNGs for unit tests of NEON matmul kernel (A72).
rand = { workspace = true }
rand_xoshiro = { workspace = true }
